# mmsb-analyzer

./: .gitignore  Cargo.toml  Cluster_progress.txt  Project.toml  README.md  cargo_check.txt  process.txt  report_analyze.txt  report_check.txt  report_only.txt  run_analysis.sh  run_executor.sh
docs/: DAG_implementation_plan.txt  DAG_implementation_plan_dead_code_analysis.txt  DAG_implementation_plan_self_correcting.txt  Requirements.txt  analyzer_config.toml  cargo_warnings.txt  conscience_map.md  metrics_baseline.txt
docs/00_refactoring_plan/: 00_summary.md  01_metrics.md  02_baseline_regressions.md  03_phase1_correctness.md  04_phase2_clusters.md  05_phase3_structural.md  06_phase4_cohesion.md  (+10 more)
src/: 000_cluster_001.rs  000_dependency.rs  000_main.jl  005_refactor_constraints.rs  010_MMSBAnalyzerJulia.jl  010_cluster_008.rs  010_layer_utilities.rs  020_ast_cfg.jl  020_cluster_010.rs  020_file_gathering.rs  030_cluster_011.rs  030_invariant_types.rs  030_ir_ssa.jl  030_utilities.rs  040_build_model.jl  040_dependency.rs  040_refactor_constraints.rs  040_scc_compressor.rs  040_structural_detector.rs  040_types.rs  050_cluster_006.rs  050_cohesion_analyzer.rs  050_semantic_detector.rs  060_cluster_010.rs  060_directory_analyzer.rs  060_layer_core.rs  060_path_detector.rs  070_control_flow.rs  070_invariant_integrator.rs  070_layer_inference.rs  070_layer_utilities.rs  080_file_ordering.rs  080_fixpoint_solver.rs  083_action_validator.rs  085_agent_conscience.rs  090_julia_parser.rs  090_utilities.rs  100_types.rs  110_dot_exporter.rs  120_report.rs  (+55 more)
test/: sample.rs
(+269 files in other folders)
