[package]
name = "mmsb-analyzer"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/140_lib.rs"

[[bin]]
name = "mmsb-analyzer"
path = "src/130_main.rs"

[features]
default = []
png = []

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
regex = "1"
once_cell = "1.19"
rayon = "1.8"
